--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,22 @@
-.intro{
-    color: red;
-    .hello-inside{
-        color: blue;
-    }
+body{
+    position: relative;
+    height: 90vh;
+    width: 100vw;
+    background-image: url('/banner.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.banner{
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+}
+
+.image-banner{
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
